cont.deactivate(ActionActuatorInPropertyMode) does not work #45886

Closed
opened 2015-08-24 03:52:41 +02:00 by Jacob Merrill · 12 comments

cont.deactivate(ActionActuatorInPropertyMode) does not work

when the signal is sent, the action continues to run
ProofOfBug.blend

pressing space = activates armature

releasing space = sends signal to deactivate actuator

actuator sensor-----------and----------rotate block = indicates that the action is on even after sending deactivate

cont.deactivate(ActionActuatorInPropertyMode) does not work when the signal is sent, the action continues to run [ProofOfBug.blend](https://archive.blender.org/developer/F227298/ProofOfBug.blend) pressing space = activates armature releasing space = sends signal to deactivate actuator actuator sensor-----------and----------rotate block = indicates that the action is on even after sending deactivate
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JacobMerrill-1

Added subscriber: @JacobMerrill-1

#46372 was marked as duplicate of this issue

#46372 was marked as duplicate of this issue

Added subscriber: @Moguri

Added subscriber: @Moguri

I have a fix for this, but it's non-essential so I'm waiting until we get back to bcon1-3.

I have a fix for this, but it's non-essential so I'm waiting until we get back to bcon1-3.
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Bcon 4 is for any bug fixes bcon 5 is for essential. And there will not be a release for another year probably

Bcon 4 is for any bug fixes bcon 5 is for essential. And there will not be a release for another year probably

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@Moguri, is the fix available anywhere?

@Moguri, is the fix available anywhere?

@ideasman42, it's in a local repo of mine. I'll try to remember to push it tonight.

@ideasman42, it's in a local repo of mine. I'll try to remember to push it tonight.

This issue was referenced by 077b4ab846

This issue was referenced by 077b4ab846c37ad2456ec6f8f3501d55f42c4ccc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45886
No description provided.