Fix T45886: cont.deactivate(ActionActuatorInPropertyMode) does not work

Make sure the Action Actuator actually deactivates when given a negative
event while using the property play mode.